--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "mini-svg-data-uri": "^1.2.3",
@@ -28,6 +29,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.2",
+    "sass-resources-loader": "^2.0.3",
     "terser-webpack-plugin": "^3.0.0",
     "thread-loader": "^2.1.3",
     "url-loader": "^4.1.0",
