--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "au-vue-app",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "custom scaffold of vue",
   "main": "index.js",
   "author": "zhaohuanyu",
@@ -20,6 +20,7 @@
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
+    "file-loader": "^6.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^4.3.0",
