--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "start:spa": "webpack-dev-server --env.dev --config build/webpack.base.conf.js",
     "build:spa": "webpack --env.prod --config build/webpack.base.conf.js",
-    "start": "webpack-dev-server --env.development --env.multi --config build/webpack.base.conf.js",
+    "dev": "webpack-dev-server --env.development --env.multi --config build/webpack.base.conf.js",
+    "start": "node build/server.js",
     "build": "webpack --env.production --env.multi --config build/webpack.base.conf.js"
   },
   "dependencies": {
@@ -26,6 +27,7 @@
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
+    "express": "^4.17.1",
     "file-loader": "^6.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "hard-source-webpack-plugin": "^0.13.1",
@@ -46,7 +48,8 @@
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^4.2.2"
   },
   "browserslist": [
