--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "html-webpack-plugin": "^4.3.0",
     "image-webpack-loader": "^6.0.0",
     "koa": "^2.13.1",
+    "koa-static": "^5.0.0",
+    "koa-webpack": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "mini-svg-data-uri": "^1.2.3",
     "node-sass": "^4.14.1",
@@ -48,8 +50,6 @@
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-middleware": "^4.1.0",
-    "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^4.2.2"
   },
   "browserslist": [
