--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "*.vue"
   ],
   "scripts": {
-    "start:spa": "webpack-dev-server --env.dev --config build/webpack.base.conf.js",
+    "start:spa": "webpack --env development --config build/webpack.base.conf.js",
     "build:spa": "webpack --env.prod --config build/webpack.base.conf.js",
     "dev": "webpack-dev-server --env.development --env.multi --config build/webpack.base.conf.js",
     "start": "node build/server.js",
@@ -29,7 +29,7 @@
     "express": "^4.17.1",
     "file-loader": "^6.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^4.5.1",
+    "html-webpack-plugin": "^5.0.0-beta.6",
     "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^5.0.0",
@@ -43,8 +43,8 @@
     "url-loader": "^4.1.0",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.11",
-    "webpack": "^5.17.0",
-    "webpack-cli": "^4.4.0",
+    "webpack": "^5.24.2",
+    "webpack-cli": "^4.5.0",
     "webpack-dev-middleware": "^4.1.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^5.7.3"
