--- a/.babelrc
+++ b/.babelrc
@@ -3,11 +3,21 @@
     [
       "@babel/preset-env",
       {
+        "targets": {},
         "useBuiltIns": "usage",
         "corejs": {
           "version": 3,
           "proposals": true
         }
+      }
+    ]
+  ],
+  "plugins": [
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "corejs": 3,
+        "regenerator": false
       }
     ]
   ]
