--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "build": "webpack --env.production --env.multi --config build/webpack.base.conf.js"
   },
   "dependencies": {
+    "@babel/runtime": "^7.13.9",
     "core-js": "3",
     "vue": "^2.6.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
+    "@babel/core": "^7.13.8",
+    "@babel/plugin-transform-runtime": "^7.13.9",
+    "@babel/preset-env": "^7.13.9",
     "autoprefixer": "^10.2.3",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
@@ -34,12 +36,13 @@
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^4.2.0",
+    "postcss": "^8.2.7",
+    "postcss-loader": "^5.1.0",
     "purgecss-webpack-plugin": "^2.2.0",
     "sass-loader": "^10.1.1",
     "sass-resources-loader": "^2.1.1",
     "terser-webpack-plugin": "^3.0.0",
-    "thread-loader": "^2.1.3",
+    "thread-loader": "^3.0.1",
     "url-loader": "^4.1.0",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.11",
@@ -48,10 +51,5 @@
     "webpack-dev-middleware": "^4.1.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^5.7.3"
-  },
-  "browserslist": [
-    "> 1%",
-    "not ie <= 8",
-    "last 2 version"
-  ]
+  }
 }
