--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "au-vue-app",
-  "version": "0.0.3",
+  "version": "1.0.7",
   "description": "custom scaffold of vue",
   "main": "index.js",
   "author": "zhaohuanyu",
@@ -10,10 +10,10 @@
   ],
   "scripts": {
     "start:spa": "webpack --env development --config build/webpack.base.conf.js",
-    "build:spa": "webpack --env.prod --config build/webpack.base.conf.js",
-    "dev": "webpack-dev-server --env.development --env.multi --config build/webpack.base.conf.js",
+    "build": "webpack --env production --config build/webpack.base.conf.js",
+    "dev": "webpack-dev-server --env development --env multi --config build/webpack.base.conf.js",
     "start": "node build/server.js",
-    "build": "webpack --env.production --env.multi --config build/webpack.base.conf.js"
+    "build:multi": "webpack --env production --env multi --config build/webpack.base.conf.js"
   },
   "dependencies": {
     "@babel/runtime": "^7.13.9",
@@ -27,15 +27,17 @@
     "autoprefixer": "^10.2.3",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^8.0.0",
     "css-loader": "^3.5.3",
+    "css-minimizer-webpack-plugin": "^1.2.0",
     "express": "^4.17.1",
     "file-loader": "^6.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^5.0.0-beta.6",
+    "html-webpack-plugin": "^5.2.0",
+    "html-webpack-tags-plugin": "^3.0.0",
     "image-webpack-loader": "^6.0.0",
-    "mini-css-extract-plugin": "^0.9.0",
+    "mini-css-extract-plugin": "^1.3.9",
     "node-sass": "^5.0.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss": "^8.2.7",
     "postcss-loader": "^5.1.0",
     "purgecss-webpack-plugin": "^2.2.0",
@@ -45,7 +47,7 @@
     "thread-loader": "^3.0.1",
     "url-loader": "^4.1.0",
     "vue-loader": "^15.9.6",
-    "vue-template-compiler": "^2.6.11",
+    "vue-template-compiler": "^2.6.12",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-middleware": "^4.1.0",
